[package]
name = "jxl-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
jxl = { git = "https://github.com/mertalev/jxl-rs", rev = "da909d2703a3870bfb421c144aa597579b74ea4e", features = ["simd128"] }
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies.web-sys]
version = "0.3"
features = ["console"]
